--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python Debugger: Current File",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
             "name": "Test HTP library",
             "type": "debugpy",
             "request": "launch",
-            "program": "HTP/oldsys/tester.py",
+            "program": "HTP/tester.py",
             "console": "integratedTerminal"
         }
     ]
